add Some html and css
added Some html and css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
-    <h1>Hello World, we are Software Developers!</h1>
+    <!--<h1>Hello World, we are Software Developers!</h1> -->
+    <header id=" welcome-section">
+      <h1>Hi! We are Lekan Esan and Isaac Browne</h1>
+      <h2> We are software Developers</h2>
+
+    </header>
+
+    <section id="projects">
+
+
+    </section>
 
 
 
