Add a navbar and link to a project

--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
     <script  src="js/index.js"></script>
     <!--<h1>Hello World, we are Software Developers!</h1> -->
     <header id=" welcome-section">
+      <nav id="navbar"></nav>
+
       <h1>Hi! We are Lekan Esan and Isaac Browne</h1>
       <h2> We are software Developers</h2>
 
     </header>
 
+
     <section id="projects">
+
+      <div class="project-tile">
+        <a href="https://google.com/">My Google Projects</a>
+      </div>
+
 
 
     </section>
