--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav id="navbar">
       <ul>
         <li><a  href="#projects">Projects</a></li>
-        <li><a href="#footer">footer</a></li>
+        <li><a href="#footer">Check us out</a></li>
       </ul>
 
     </nav>
